# context-health

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
context_health/: __init__.py  cli.py  models.py  report.py  run_audit.py  run_models.py  run_report.py  scanner.py  scoring.py
context_health/rules/: __init__.py  agent_instructions.py  bloat.py  consistency.py  docs.py  env.py  tests.py
docs/: agent-handoff-recipe.md  agent-run-audit.md  findings.md  known-limitations.md  release-checklist.md
scripts/: package_smoke.py
tests/: conftest.py  test_cli.py  test_config.py  test_docs.py  test_findings_catalog.py  test_report.py  test_rules_agent_instructions.py  test_rules_bloat.py  test_rules_consistency.py  test_rules_docs.py  test_rules_env.py  test_run_audit.py  test_scanner.py  test_snapshots.py
tests/fixtures/agent_run_good/: changes.diff  handoff.md
tests/fixtures/agent_run_missing_handoff/: changes.diff
tests/fixtures/agent_run_risky/: changes.diff  handoff.md
tests/fixtures/bloaty_repo/: .env.example  AGENTS.md  README.md  app.bundle.js
tests/fixtures/bloaty_repo/docs/: giant.md
tests/fixtures/blocked_node/: package.json
tests/fixtures/blocked_node/src/: index.ts
tests/fixtures/conflicting_agents/: CLAUDE.md  README.md
tests/fixtures/healthy_node/: AGENTS.md  README.md  package.json
tests/fixtures/healthy_node/.github/workflows/: test.yml
tests/fixtures/pnpm_monorepo/: AGENTS.md  README.md  package.json
tests/fixtures/pnpm_monorepo/.github/workflows/: test.yml
tests/fixtures/pnpm_monorepo/apps/web/: package.json
tests/fixtures/python_missing_env/: README.md  app.py  pyproject.toml
tests/fixtures/vague_agent_instructions/: AGENTS.md  package.json
tests/snapshots/: blocked_node.json  blocked_node.md  healthy_node.txt  pnpm_monorepo.json  vague_agent_instructions.json
