[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-health"
version = "0.1.0"
description = "CLI for auditing repository agent-context readiness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
context-health = "context_health.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
