[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-health"
version = "0.1.0"
description = "CLI for auditing repository agent-context readiness"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Context Health contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
context-health = "context_health.cli:main"

[project.urls]
Homepage = "https://github.com/xliry/context-health"
Repository = "https://github.com/xliry/context-health"
Issues = "https://github.com/xliry/context-health/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
